Convert navbar to bootstrap navbar

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,5 +1,12 @@
 @charset 'utf-8';
 
+@import url(http://fonts.googleapis.com/css?family=Maven+Pro:400,500,700);
+
+@import 'bootstrap-variables';
+@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
+
+@import 'navbar';
+
 body {
   text-align: center;
 }
