--- a/src/css/_leaflet-overrides.scss
+++ b/src/css/_leaflet-overrides.scss
@@ -1,30 +1,7 @@
-@import url(http://fonts.googleapis.com/css?family=Maven+Pro:400,500,700);
+// TODO: Streamline
 
-* {
-  box-sizing: border-box;
-}
-
-html {
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  margin: 0;
-  font-family: 'Maven Pro', sans-serif;
-}
-
-#map {
-  position: absolute;
-  top: 50px;
-  left: 0;
-  width: 100%;
-  height: calc(100% - 50px);
-}
-
-.mz-geolocator {
-  top: 122px !important;
-}
+// Inline the leaflet-geocoder styles
+@import '../../node_modules/leaflet-geocoder/dist/pelias-leaflet-geocoder.css';
 
 .leaflet-touch .mz-geolocator {
   top: 60px !important;
@@ -154,53 +131,4 @@ only screen and (min-device-pixel-ratio: 2) {
 
 .leaflet-control-attribution.leaflet-control a {
   color: white;
-}
-
-
-
-
-#pin {
-  position: absolute;
-  width: 176px;
-  height: 64px;
-  top: 50%;
-  left: 50%;
-  margin-top: -64px;
-  margin-left: -88px;
-  border: 3px solid rgba(237, 29, 36, 1);
-  border-radius: 6px;
-  background-color: rgba(244, 244, 244, 0.99);
-  z-index: 1000;
-}
-
-#pin::before {
-  content: '';
-  display: block;
-  position: absolute;
-  bottom: -48px;
-  left: 50%;
-  margin-left: -24px;
-  border: 24px solid transparent;
-  border-top-color: rgba(237, 29, 36, 1);
-  z-index: 1000;
-  pointer-events: none;
-  user-select: none;
-  -ms-user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-}
-
-#emojis {
-  text-align: center;
-  font-size: 3em;
-  line-height: 58px;
-}
-
-img.emojione {
-  width: 32px;
-  height: 32px;
-}
-
-img.emojione:not(:last-of-type) {
-  margin-right: 16px;
 }
