--- a/src/css/_bootstrap-variables.scss
+++ b/src/css/_bootstrap-variables.scss
@@ -1,15 +1,27 @@
 $border-radius-base: 2px;
 
-//== Navbar
-//
-//##
+//== Buttons
 
+$btn-default-color: white;
+$btn-default-bg: $primary-color;
+$btn-default-border: transparent;
+$btn-border-radius-base: $border-radius-base;
+$btn-border-radius-large: $border-radius-base;
+$btn-border-radius-small: $border-radius-base;
+
+//== Navbar
+
+$navbar-margin-bottom: 0;
 $navbar-border-radius: 0;
 $navbar-inverse-color: white;
-$navbar-inverse-bg: #ea222e;
+$navbar-inverse-bg: $primary-color;
 $navbar-inverse-border: transparent;
 $navbar-inverse-link-color: white;
 $navbar-inverse-brand-color: white;
 $navbar-inverse-toggle-hover-bg: rgba(255, 255, 255, 0.25);
 $navbar-inverse-toggle-icon-bar-bg: #fff;
 $navbar-inverse-toggle-border-color: transparent;
+
+//== Jumbotron
+
+$jumbotron-color: white;
