--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -1,12 +1,21 @@
 
 .btn-default {
   font-family: 'Maven Pro', sans-serif;
-  padding: 20px 32px;
-  font-size: 1.2em;
   box-shadow: 0 2px 0 #c4101c;
+}
+
+.input-group .btn-default {
+  box-shadow: none;
 }
 
 .btn-lg {
   margin-top: 20px;
   margin-bottom: 20px;
+  padding: 20px 32px;
+  font-size: 1.2em;
+}
+
+.btn-md {
+  margin-top: 20px;
+  padding: 10px 16px;
 }
