--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -1,21 +1,18 @@
 
-.btn-default {
+.btn-primary {
   font-family: 'Maven Pro', sans-serif;
   box-shadow: 0 2px 0 #c4101c;
 }
 
-.input-group .btn-default {
+.input-group .btn-primary {
   box-shadow: none;
 }
 
 .btn-lg {
   margin-top: 20px;
   margin-bottom: 20px;
-  padding: 20px 32px;
-  font-size: 1.2em;
 }
 
 .btn-md {
   margin-top: 20px;
-  padding: 10px 16px;
 }
