migrate to parcel, step 2: js and other pages

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -59,7 +59,7 @@ body {
 
 body.login {
   .jumbotron {
-    background-image: url(/img/slideshow02.jpg);
+    background-image: url('../images/slideshow02.jpg');
   }
   .jumbotron .container {
     padding: 40px;
