--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,6 @@
 @charset 'utf-8';
 
-@import url('https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700|Roboto:200,400,300,300italic');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,500,700,300italic');
 
 @import 'bootstrap-variables';
 @import '../../node_modules/bootstrap/scss/bootstrap';
@@ -17,7 +17,9 @@ body.main {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  color: #0a3049;
+  font-family: 'Source Sans Pro', Roboto, Arial, sans-serif;
+  font-weight: 300;
 }
 
 .jumbotron {
